--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baseta - Find your dream house</title>
+  <title>Real-Estate - Find your dream house</title>
   <link rel="shortcut icon" href="./main_logo_lg.png" type="image/svg+xml">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -35,95 +35,7 @@
   </div>
 
 
-  <header class="header" data-header>
 
-    <div class="overlay" data-overlay></div>
-
-    <div class="header-bottom">
-      <div class="container">
-
-        <a href="#" class="logo">
-          <img src="./assets/images/logo.png" alt="Homeverse logo">
-        </a>
-
-        <nav class="navbar" data-navbar>
-
-          <div class="navbar-top">
-
-            <a href="#" class="logo">
-              <img src="./assets/images/logo.png" alt="Homeverse logo">
-            </a>
-
-            <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
-              <ion-icon name="close-outline"></ion-icon>
-            </button>
-
-          </div>
-
-          <div class="navbar-bottom">
-            <ul class="navbar-list">
-
-              <li>
-                <a href="#home" class="navbar-link" data-nav-link>Home</a>
-              </li>
-
-              <li>
-                <a href="#about" class="navbar-link" data-nav-link>About</a>
-              </li>
-
-              <li>
-                <a href="#service" class="navbar-link" data-nav-link>Service</a>
-              </li>
-
-              <li>
-                <a href="#property" class="navbar-link" data-nav-link>Property</a>
-              </li>
-
-              <li>
-                <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
-              </li>
-
-              <li>
-                <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
-              </li>
-
-            </ul>
-          </div>
-
-        </nav>
-
-        <div class="header-bottom-actions">
-
-          <button class="header-bottom-actions-btn" aria-label="Search">
-            <ion-icon name="search-outline"></ion-icon>
-
-            <span>Search</span>
-          </button>
-
-          <button class="header-bottom-actions-btn" aria-label="Profile">
-            <ion-icon name="person-outline"></ion-icon>
-
-            <span>Profile</span>
-          </button>
-
-          <button class="header-bottom-actions-btn" aria-label="Cart">
-            <ion-icon name="cart-outline"></ion-icon>
-
-            <span>Cart</span>
-          </button>
-
-          <button class="header-bottom-actions-btn" data-nav-open-btn aria-label="Open Menu">
-            <ion-icon name="menu-outline"></ion-icon>
-
-            <span>Menu</span>
-          </button>
-
-        </div>
-
-      </div>
-    </div>
-
-  </header>
 
 
 
@@ -133,7 +45,7 @@
       <div class="constainer headn">
         <ul class="header-top-list">
           <li>
-            <img src="assets/images/main_logo_lg.png" alt="Girl in a jacket" width="150" height="200">
+            <img src="assets/images/logo.jpeg" alt="Girl in a jacket" width="150" height="200">
           </li>
         </ul>
         <div class="wrapper">
@@ -565,7 +477,7 @@
     <div class="footer-brand">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-light.png" alt="Homeverse logo">
+        <img src="./assets/images/logo.jpeg" alt="Homeverse logo">
       </a>
 
       <p class="section-text mb-2">
@@ -578,7 +490,7 @@
           <a href="#" class="contact-link">
             <ion-icon name="location-outline"></ion-icon>
 
-            <address>Brooklyn, New York, United States</address>
+            <address>Egypt ,dubai , Qatar</address>
           </a>
         </li>
 
@@ -586,7 +498,7 @@
           <a href="tel:+0123456789" class="contact-link">
             <ion-icon name="call-outline"></ion-icon>
 
-            <span>+0123-456789</span>
+            <span>+0111-000000</span>
           </a>
         </li>
 
@@ -733,15 +645,6 @@
   </div>
 </div>
 
-<div class="footer-bottom">
-  <div class="container">
-
-    <p class="copyright">
-      &copy; 2022 <a href="#">codewithsadee</a>. All Rights Reserved
-    </p>
-
-  </div>
-</div>
 
 </footer>
 
