--- a/index.html
+++ b/index.html
@@ -36,43 +36,54 @@
 
 
 
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between ">
+      <a href="/" class="d-flex px-4 col-md-3 mb-2 mb-md-0  ">
+        <img src="assets/images/logo.jpeg" alt="" class="logo-sd">
+      </a>
 
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+        <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
+      </ul>
 
-
-
-  <navbar>
-    <div class="header-top" style="">
-      <div class="constainer headn">
-        <ul class="header-top-list">
-          <li>
-            <img src="assets/images/logo.jpeg" alt="Girl in a jacket" width="150" height="200">
-          </li>
-        </ul>
-        <div class="wrapper">
-          <li class="fb-li">
-            <a href="https://www.facebook.com/mybaseta/" class="header-top-social-link">
-              <ion-icon name="logo-facebook" ></ion-icon>
-              <a href="https://www.facebook.com/mybaseta/" class="header-top-link">
-              </a>
-            </a>
-          </li>
-          <li class="fb-li">
-            <a href="./ar/index.html" class="header-top-social-link">
-              <a href="./ar/index.html" class="header-top-link">
-                <p style="color: black;font-size: 1.24rem;">Ar</p>
-              </a>
-
-            </a>
-          </li>
-          <!-- <a href="./ar/index.html">
-            <button class="butn btn-secondary" type="button">
-              Ar
-            </button>
-          </a> -->
+      <div class="col-md-3 text-center">
+        <!-- <button type="button" class="btn langs-btn btn-primary">Arabic</button> -->
+        <div class="switch">
+          <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
+          <label for="language-toggle"></label>
+          <span class="on">BN</span>
+          <span class="off">EN</span>
         </div>
       </div>
+    </header>
+  <!-- <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="assets/images/logo.jpeg" alt="" class="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+        </ul>
+        <span class="navbar-text">
+          Navbar text with an inline element
+        </span>
+      </div>
     </div>
-  </navbar>
+  </nav> -->
+
 
 
 
