--- a/search/search.html
+++ b/search/search.html
@@ -50,7 +50,7 @@
 
       <div class="col-md-3 text-center">
         <!-- <button type="button" class="btn langs-btn btn-primary">Arabic</button> -->
-        <div class="switch">
+        <div class="switch"onclick="go_to_arabic()">
           <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
           <label for="language-toggle"></label>
           <span class="on">BN</span>
@@ -78,7 +78,7 @@
 
       <div class="col-md-3 text-center disnav">
         <!-- <button type="button" class="btn langs-btn btn-primary">Arabic</button> -->
-        <div class="switch">
+        <div class="switch"onclick="go_to_arabic()">
           <input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
           <label for="language-toggle"></label>
           <span class="on">BN</span>
